# SomeLife

./: .gitignore  CMakeLists.txt  Makefile  README.md
recipes/: genrandom.py  membranes.txt  membranes2.txt  mitosis.txt  speedybois.txt  violentgreens.txt
res/: somelife.conf
res/opencl/: particle-grid.cl  simulation.cl  storage.hcl
src/: ArgumentConfig.cpp  ArgumentConfig.hpp  Config.cpp  Config.hpp  Display.cpp  Display.hpp  OpenClRunner.cpp  OpenClRunner.hpp  Particle.cpp  Particle.hpp  ParticleGrid.cpp  ParticleGrid.hpp  ParticleStore.cpp  ParticleStore.hpp  QuadTree.cpp  QuadTree.hpp  Recipe.cpp  Recipe.hpp  Replayer.cpp  Replayer.hpp  Rule.hpp  RuleStore.cpp  RuleStore.hpp  Simulation.cpp  Simulation.hpp  main.cpp  opencl-proxy.hpp  opencl-utils.cpp  opencl-utils.hpp  simulation.cl  strutil.cpp  strutil.hpp
